# src/main/java/com/lawlayui/e_commerce/product_inventory/application/port/in/InventoryItemDto.java
@@ -1,5 +1,5 @@
 package com.lawlayui.e_commerce.product_inventory.application.port.in;
 
-public record InventoryItemDto(String sku, String quantity, String locationCode) {
+public record InventoryItemDto(String sku, int quantity, String locationCode) {
     
 }
